feat: allow user to choose stylesheet and starting coordinates (#44)
