# docs/swagger.yaml
@@ -143,6 +143,13 @@ definitions:
       show_legend_key:
         type: boolean
     type: object
+  models.Option:
+    properties:
+      coordinates:
+        type: string
+      sheetname:
+        type: string
+    type: object
   models.PlotArea:
     properties:
       show_bubble_size:
@@ -164,6 +171,13 @@ definitions:
         type: boolean
       locked:
         type: boolean
+    type: object
+  models.ReaderOption:
+    properties:
+      options:
+        items:
+          $ref: '#/definitions/models.Option'
+        type: array
     type: object
   models.Series:
     properties:
@@ -235,11 +249,11 @@ paths:
         required: true
         schema:
           type: string
-      - description: Sheets to extract
+      - description: Reader optional options
         in: body
-        name: sheets
+        name: options
         schema:
-          type: string
+          $ref: '#/definitions/models.ReaderOption'
       produces:
       - application/json
       responses:
@@ -266,11 +280,11 @@ paths:
         required: true
         schema:
           type: string
-      - description: Sheets to extract
+      - description: Reader optional options
         in: body
-        name: sheets
+        name: options
         schema:
-          type: string
+          $ref: '#/definitions/models.ReaderOption'
       produces:
       - application/json
       responses:
